; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_remote_translate_xfer_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_remote_translate_xfer_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.regcache = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gdbarch*, %struct.regcache*, i32, i32, i32*, i32*)* @ia64_remote_translate_xfer_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ia64_remote_translate_xfer_address(%struct.gdbarch* %0, %struct.regcache* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca %struct.gdbarch*, align 8
  %8 = alloca %struct.regcache*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %7, align 8
  store %struct.regcache* %1, %struct.regcache** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32, i32* %9, align 4
  %14 = load i32*, i32** %11, align 8
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* %10, align 4
  %16 = load i32*, i32** %12, align 8
  store i32 %15, i32* %16, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
